crates/configuration/src/snapshots/configuration__tests__ensure_configuration_api_does_not_change.snap
---
source: crates/configuration/src/lib.rs
expression: config

---
server:
  listen: "1.2.3.4:5"
  cors: ~
subgraphs:
  example:
    routing_url: foo
opentelemetry: ~

