crates/configuration/src/snapshots/configuration__tests__ensure_configuration_api_does_not_change_tls_config.snap
---
source: crates/configuration/src/lib.rs
expression: config

---
server:
  listen: "1.2.3.4:5"
  cors: ~
subgraphs:
  example:
    routing_url: foo
opentelemetry:
  otlp:
    tracing:
      exporter:
        endpoint: ~
        metadata: ~
        protocol: ~
        timeout: ~
        tls_config:
          domain_name: ~
          ca:
            env: SECRET_STUFF
          cert:
            file: /foo
          key:
            file: /bar
      trace_config: ~

