crates/configuration/src/snapshots/configuration__tests__supergraph_config_serde.snap
---
source: crates/configuration/src/lib.rs
expression: config

---
server:
  listen: "127.0.0.1:4001"
  cors:
    origins:
      - studio.apollographql.com
    methods:
      - GET
      - PUT
subgraphs:
  accounts:
    routing_url: "http://localhost:4001/graphql"
  inventory:
    routing_url: "http://localhost:4004/graphql"
  products:
    routing_url: "http://localhost:4003/graphql"
  reviews:
    routing_url: "http://localhost:4002/graphql"
opentelemetry: ~

